--- a/free-nodes/2025-1-8-free-high-speed-nodes.htm
+++ b/free-nodes/2025-1-8-free-high-speed-nodes.htm
@@ -111,6 +111,7 @@
 <p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p><p>&nbsp;</p><p></p><h2>订阅链接</h2><p>&nbsp;</p><p><strong>clash订阅链接</strong></p><p>https://clashgithub.github.io/uploads/2025/01/0-20250108.yaml</p><p>https://clashgithub.github.io/uploads/2025/01/1-20250108.yaml</p><p>https://clashgithub.github.io/uploads/2025/01/2-20250108.yaml</p><p>https://clashgithub.github.io/uploads/2025/01/3-20250108.yaml</p><p>https://clashgithub.github.io/uploads/2025/01/4-20250108.yaml</p><p>&nbsp;</p><p><strong>v2ray订阅链接:</strong></p><p>https://clashgithub.github.io/uploads/2025/01/0-20250108.txt</p><p>https://clashgithub.github.io/uploads/2025/01/1-20250108.txt</p><p>https://clashgithub.github.io/uploads/2025/01/2-20250108.txt</p><p>https://clashgithub.github.io/uploads/2025/01/3-20250108.txt</p><p>https://clashgithub.github.io/uploads/2025/01/4-20250108.txt</p><p><strong>sing-box订阅链接</strong></p><p>https://clashgithub.github.io/uploads/2025/01/20250108.json</p><p>&nbsp;</p><p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="https://web.fxyjs.fun/#/register?code=" data-type="Fangxin" data-code="mYHEkaJ1" rel="nofollow noopener" style="color:#c00;">放心云</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>                <div class="clearfix"></div>
                 <div class="col-md-12 mt-5">
                                         <p>上一个：<a href="/free-nodes/2025-1-7-node-share-links.htm">1月7日→22.9M/S|2025年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址，便宜机场推荐</a></p>
+                                        <p>下一个：<a href="/free-nodes/2025-1-9-clash-node-daily-updates.htm">1月9日→18.1M/S|2025年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址，便宜机场推荐</a></p>
                                     </div>
                                 <div class="panel panel-default mt-5">
                     <div class="panel-heading">
@@ -139,16 +140,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-12-23-clash-windows.htm" title="12月23日→18.6M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐">12月23日→18.6M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-22-free-ssr-subscribe.htm" title="12月22日→18.3M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐">12月22日→18.3M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-13-free-ssr-node.htm" title="11月13日→20.1M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐">11月13日→20.1M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-25021.htm" title="宠物领养协议书模板下载手机版 宠物领养协议书模板下载手机版">宠物领养协议书模板下载手机版 宠物领养协议书模板下载手机版</a></li>
-                        <li class="py-2"><a href="/news/article-23635.htm" title="linux服务器磁盘满了的处理方法">linux服务器磁盘满了的处理方法</a></li>
-                        <li class="py-2"><a href="/news/article-33487.htm" title="python ui框架_PyQt5GUI项目程序框架">python ui框架_PyQt5GUI项目程序框架</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-26-free-clash.htm" title="12月26日→20.5M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐">12月26日→20.5M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-30634.htm" title="Spring boot整合JPA">Spring boot整合JPA</a></li>
-                        <li class="py-2"><a href="/news/article-35856.htm" title="宠物美容师很辛苦吗（宠物美容师值得坚持吗）">宠物美容师很辛苦吗（宠物美容师值得坚持吗）</a></li>
-                        <li class="py-2"><a href="/news/article-31586.htm" title="一文搞定CompletableFuture并行处理，成倍缩短查询时间。">一文搞定CompletableFuture并行处理，成倍缩短查询时间。</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-11-clash-node.htm" title="12月11日→18.8M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐">12月11日→18.8M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-20881.htm" title="宠物粮市场前景如何（宠物粮食市场）">宠物粮市场前景如何（宠物粮食市场）</a></li>
+                        <li class="py-2"><a href="/news/article-26419.htm" title="动物打疫苗前后要注意什么 动物打疫苗前后要注意什么事项">动物打疫苗前后要注意什么 动物打疫苗前后要注意什么事项</a></li>
+                        <li class="py-2"><a href="/news/article-33004.htm" title="宠物医院美团好评回复优美语句 宠物医院美团好评回复优美语句怎么写">宠物医院美团好评回复优美语句 宠物医院美团好评回复优美语句怎么写</a></li>
+                        <li class="py-2"><a href="/news/article-35855.htm" title="广州有没有宠物领养机构啊多少钱（广州有没有领养宠物狗）">广州有没有宠物领养机构啊多少钱（广州有没有领养宠物狗）</a></li>
+                        <li class="py-2"><a href="/news/article-22256.htm" title="宠物食品厂家招聘（宠物食品工厂招聘）">宠物食品厂家招聘（宠物食品工厂招聘）</a></li>
+                        <li class="py-2"><a href="/news/article-29198.htm" title="lambda表达式之allMatch、anyMatch、noneMatch">lambda表达式之allMatch、anyMatch、noneMatch</a></li>
+                        <li class="py-2"><a href="/news/article-34905.htm" title="宠物粮食排行榜前十名品牌图片（宠物粮食排行榜前十名品牌图片大全）">宠物粮食排行榜前十名品牌图片（宠物粮食排行榜前十名品牌图片大全）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-8-free-high-speed-nodes.htm" title="1月8日→18.2M/S|2025年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址，便宜机场推荐">1月8日→18.2M/S|2025年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-25956.htm" title="猫咪驱虫费用（猫咪驱虫多少钱一次?）">猫咪驱虫费用（猫咪驱虫多少钱一次?）</a></li>
                     </ul>
     </div>
 </div>
@@ -160,7 +161,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
