--- a/free-nodes/page-10.htm
+++ b/free-nodes/page-10.htm
@@ -95,6 +95,20 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2024-10-11">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2024-10-11-clash-node.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/cc93aa4b19cc04eb52a9aba9ef1e6db7.webp" alt="10月11日→19.4M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2024-10-11-clash-node.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">10月11日→19.4M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了日本、加拿大、韩国、新加坡、香港、美国、欧洲等地区,最高速度可达19.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2024-10-10">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2024-10-10-free-v2ray.htm" class="xcblog-blog-url">
@@ -161,16 +175,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/free-nodes/2024-12-25-free-ssr-subscribe.htm" title="12月25日→19.7M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址，便宜机场推荐">12月25日→19.7M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-23636.htm" title="动物医院的名字有哪些好听（动物医院名字大气）">动物医院的名字有哪些好听（动物医院名字大气）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-14-free-v2ray.htm" title="11月14日→22.4M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐">11月14日→22.4M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-3-free-high-speed-nodes.htm" title="12月3日→20.1M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址，便宜机场推荐">12月3日→20.1M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-20-free-v2ray-subscribe.htm" title="10月20日→20M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址，便宜机场推荐">10月20日→20M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/news/article-19971.htm" title="生物医学工程考研难度（生物工程考研学校）">生物医学工程考研难度（生物工程考研学校）</a></li>
-                        <li class="py-2"><a href="/news/article-18600.htm" title="宠物打疫苗期间可以驱虫吗（宠物打完疫苗可以喷药吗）">宠物打疫苗期间可以驱虫吗（宠物打完疫苗可以喷药吗）</a></li>
-                        <li class="py-2"><a href="/news/article-28735.htm" title="上海24h宠物医院（上海宠物医院24小时急诊上门）">上海24h宠物医院（上海宠物医院24小时急诊上门）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-7-node-share-links.htm" title="1月7日→22.9M/S|2025年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址，便宜机场推荐">1月7日→22.9M/S|2025年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-1-free-shadowrocket-node.htm" title="11月1日→18.5M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐">11月1日→18.5M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-35855.htm" title="广州有没有宠物领养机构啊多少钱（广州有没有领养宠物狗）">广州有没有宠物领养机构啊多少钱（广州有没有领养宠物狗）</a></li>
-                        <li class="py-2"><a href="/news/article-30073.htm" title="动物医院实践心得体会怎么写啊（动物医院实践心得2000）">动物医院实践心得体会怎么写啊（动物医院实践心得2000）</a></li>
-                        <li class="py-2"><a href="/news/article-36837.htm" title="三国杀谋武将技能.（三国杀 计谋）">三国杀谋武将技能.（三国杀 计谋）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-15-free-node-subscribe-links.htm" title="12月15日→19.7M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐">12月15日→19.7M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-30156.htm" title="Redis 数据持久化实践">Redis 数据持久化实践</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-23-clash-windows.htm" title="12月23日→18.6M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐">12月23日→18.6M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-29-free-clash.htm" title="12月29日→20.1M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址，便宜机场推荐">12月29日→20.1M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-37811.htm" title="动物疫苗可以去畜牧局批发吗现在 动物疫苗可以去畜牧局批发吗现在还有吗">动物疫苗可以去畜牧局批发吗现在 动物疫苗可以去畜牧局批发吗现在还有吗</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-6-free-clash-subscribe.htm" title="12月6日→22.4M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址，便宜机场推荐">12月6日→22.4M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -182,7 +196,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
