--- a/free-nodes/page-8.htm
+++ b/free-nodes/page-8.htm
@@ -95,6 +95,20 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2024-11-01">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2024-11-1-free-shadowrocket-node.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/462333cdd7156cdfce9b23a70ece7cac.webp" alt="11月1日→18.5M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2024-11-1-free-shadowrocket-node.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">11月1日→18.5M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了香港、加拿大、韩国、新加坡、欧洲、美国、日本等地区,最高速度可达18.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2024-10-31">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2024-10-31-clash-windows.htm" class="xcblog-blog-url">
@@ -221,20 +235,6 @@
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2024-10-22">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2024-10-22-free-ssr-node.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/db7c68b5b7819c5295eb5d9572b0061c.webp" alt="10月22日→20.5M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2024-10-22-free-ssr-node.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">10月22日→20.5M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了欧洲、美国、香港、加拿大、日本、韩国、新加坡等地区,最高速度可达20.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
                             </div>
             <ul class="pagination"><li><a href="/free-nodes/page-7.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li><li><a href="/free-nodes/page-7.htm">7</a></li><li class="active"><span>8</span></li><li><a href="/free-nodes/page-9.htm">9</a></li><li><a href="/free-nodes/page-10.htm">10</a></li> <li><a href="/free-nodes/page-9.htm">&raquo;</a></li></ul>            <!-- //welcome -->
         </div>
@@ -245,16 +245,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-20430.htm" title="宠物粮食加工厂加盟条件要求标准 宠物粮食加工厂加盟条件要求标准是什么">宠物粮食加工厂加盟条件要求标准 宠物粮食加工厂加盟条件要求标准是什么</a></li>
-                        <li class="py-2"><a href="/news/article-24575.htm" title="动物疫苗种类和特点图片（动物疫苗的了解）">动物疫苗种类和特点图片（动物疫苗的了解）</a></li>
-                        <li class="py-2"><a href="/news/article-24468.htm" title="SpringBoot实战实现WEB的常用功能">SpringBoot实战实现WEB的常用功能</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-15-clash-node.htm" title="10月15日→21M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐">10月15日→21M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-20431.htm" title="猫三联一共几针,多少钱,多久打一次好（猫三联大概多少钱一针）">猫三联一共几针,多少钱,多久打一次好（猫三联大概多少钱一针）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-28-clash-node-daily-updates.htm" title="11月28日→19M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐">11月28日→19M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-20880.htm" title="开宠物店需要干什么（开宠物店需要准备什么?）">开宠物店需要干什么（开宠物店需要准备什么?）</a></li>
+                        <li class="py-2"><a href="/news/article-32053.htm" title="中国农业大学动物医学学院官网（中国农业大学动物医学院招生简章）">中国农业大学动物医学学院官网（中国农业大学动物医学院招生简章）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-10-free-node-subscribe-links.htm" title="1月10日→18.1M/S|2025年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐">1月10日→18.1M/S|2025年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-30-clash-node-daily-updates.htm" title="12月30日→18.5M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址，便宜机场推荐">12月30日→18.5M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-36349.htm" title="宠物之家托运好不好（宠物之家在哪里）">宠物之家托运好不好（宠物之家在哪里）</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-11-17-free-ssr-node.htm" title="11月17日→21.5M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址，便宜机场推荐">11月17日→21.5M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-3-free-high-speed-nodes.htm" title="12月3日→20.1M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址，便宜机场推荐">12月3日→20.1M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-5-free-node-subscribe-links.htm" title="1月5日→22.7M/S|2025年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址，便宜机场推荐">1月5日→22.7M/S|2025年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-14-free-ssr-node.htm" title="12月14日→23M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐">12月14日→23M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-36838.htm" title="宠物医院好评200字通用评论怎么写（宠物医院好评的段子）">宠物医院好评200字通用评论怎么写（宠物医院好评的段子）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-19-free-clash.htm" title="12月19日→22.4M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址，便宜机场推荐">12月19日→22.4M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-11-clash-node.htm" title="12月11日→18.8M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐">12月11日→18.8M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-34906.htm" title="河南省动物疫病预防控制中心（河南省动物疫病预防控制中心地址）">河南省动物疫病预防控制中心（河南省动物疫病预防控制中心地址）</a></li>
                     </ul>
     </div>
 </div>
@@ -266,7 +266,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
