--- a/newly-discovered-nodes/index.html
+++ b/newly-discovered-nodes/index.html
@@ -108,10 +108,10 @@
 
 <p>网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://invite.spcloud.vip/#/register?code=" data-type="SPCloud" data-code="4AmRJ16y" rel="nofollow noopener"><font color="#ff0000">SPCloud（点击注册）</font></a>】</p>
 
-<p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p>                    <h3>高速机场推荐3【<a href="javascript:;" class="js_to" data-url="https://inv.easyfastcloud.com/#/register?code=" data-type="EFCloud" data-code="wcHPHUo2" rel="nofollow noopener" style="color:red;">EFCloud</a>】</h3>
-                    <p>新用户 8 折优惠 8 折优惠券代码: <font color="#ff0000"><b>new</b></font> 下单时在验证优惠券处填写 new 验证即可获得优惠 不限套餐/时长 , 每位用户仅可用一次(老用户没用过也可以用） 只要没用过就可以用，没有时间限制，费用低至<font color="#ff0000">0.2元/天</font>,无视高峰，<font color="#ff0000">不限制设备数量</font>，全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选择，现在注册即可免费试用！</p>
+<p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p>                    <h3>高速机场推荐3【<a href="javascript:;" class="js_to" data-url="https://www.fastconnectcloud.net/#/register?code=" data-type="FCCloud" data-code="x1m5Kg8R" rel="nofollow noopener" style="color:red;">FCCloud</a>】</h3>
+                    <p>新用户 8 折优惠 8 折优惠券代码: <font color="#ff0000"><b>new</b></font> 下单时在验证优惠券处填写 new 验证即可获得优惠 不限套餐/时长 , 每位用户仅可用一次(老用户没用过也可以用） 只要没用过就可以用，没有时间限制，费用低至<font color="#ff0000">0.33元/天</font>,无视高峰，<font color="#ff0000">不限制设备数量</font>，全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选择，现在注册即可免费试用！</p>
 
-<p>网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://inv.easyfastcloud.com/#/register?code=" data-type="EFCloud" data-code="wcHPHUo2" rel="nofollow noopener"><font color="#ff0000">EFCloud（点击注册）</font></a>】</p>
+<p>网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://www.fastconnectcloud.net/#/register?code=" data-type="FCCloud" data-code="x1m5Kg8R" rel="nofollow noopener"><font color="#ff0000">FCCloud（点击注册）</font></a>】</p>
 <p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p>
                     <p>&nbsp;</p>
                     <p></p>
@@ -125,7 +125,7 @@
                     <p><strong>sing-box订阅链接</strong></p>
                     <div class="xcblog-singbox-box"></div>
                     <p>&nbsp;</p>
-                    <p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="https://web.fxyjs.fun/#/register?code=" data-code="mYHEkaJ1" rel="nofollow noopener" style="color:#c00;">放心云</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>    
+                    <p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="https://t2.9999911.xyz/#/register?code=" data-code="6KO4Fpse" rel="nofollow noopener" style="color:#c00;">星辰机场</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>    
 
                 </div>
             </div>
@@ -136,16 +136,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-10-10-free-v2ray.htm" title="10月10日→19.1M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址">10月10日→19.1M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-24-free-node-subscribe.htm" title="10月24日→19.9M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址，便宜机场推荐">10月24日→19.9M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-25955.htm" title="领养宠物签的合同到底有用吗知乎 领养宠物签的合同到底有用吗知乎文章">领养宠物签的合同到底有用吗知乎 领养宠物签的合同到底有用吗知乎文章</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-30-free-shadowrocket-node.htm" title="10月30日→18M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐">10月30日→18M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-13-free-ssr-node.htm" title="12月13日→20M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址，便宜机场推荐">12月13日→20M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-18-clash-windows.htm" title="10月18日→19.6M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址，便宜机场推荐">10月18日→19.6M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-11-clash-node.htm" title="12月11日→18.8M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐">12月11日→18.8M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-29198.htm" title="lambda表达式之allMatch、anyMatch、noneMatch">lambda表达式之allMatch、anyMatch、noneMatch</a></li>
-                        <li class="py-2"><a href="/news/article-30156.htm" title="Redis 数据持久化实践">Redis 数据持久化实践</a></li>
-                        <li class="py-2"><a href="/news/article-33970.htm" title="在C ++中替换后检查Word是否有效">在C ++中替换后检查Word是否有效</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-7-node-share.htm" title="10月7日→20M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址">10月7日→20M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-21794.htm" title="QQ截图工具截取">QQ截图工具截取</a></li>
+                        <li class="py-2"><a href="/news/article-37316.htm" title="我所在的城市有一家宠物医院英语翻译怎么说（在我的城市有一家宠物医院英文）">我所在的城市有一家宠物医院英语翻译怎么说（在我的城市有一家宠物医院英文）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-19-clash-v2ray-ss-ssr.htm" title="10月19日→22.2M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐">10月19日→22.2M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-30158.htm" title="宠物领养平台app推荐下载苹果手机（宠物领养平台app推荐下载苹果手机软件）">宠物领养平台app推荐下载苹果手机（宠物领养平台app推荐下载苹果手机软件）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-12-free-high-speed-nodes.htm" title="10月12日→20.3M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址">10月12日→20.3M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-27-free-clash-subscribe.htm" title="10月27日→21M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐">10月27日→21M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-16-free-v2ray-subscribe.htm" title="10月16日→23M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址，便宜机场推荐">10月16日→23M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-19970.htm" title="广州市宠物领养平台有哪些（广州哪里有宠物领养机构）">广州市宠物领养平台有哪些（广州哪里有宠物领养机构）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-28-clash-node-daily-updates.htm" title="11月28日→19M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐">11月28日→19M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -157,7 +157,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
